Updated submission guidelines

--- a/submissions.Rmd
+++ b/submissions.Rmd
@@ -14,7 +14,6 @@ d-article > * {
 
 Articles for the R Journal should be no more than 20 pages, on topics of interest to the R community. Articles must not be published or submitted for publication elsewhere.
 
-
 # Creating your article
 
 We currently accept submissions in Rmarkdown or LaTeX. Rmarkdown using the [rjtools package](https://rjournal.github.io/rjtools/) is preferred.
@@ -39,7 +38,11 @@ The `rticles::rjournal_article` output format has been deprecated in favour of `
 
 ### LaTeX format
 
-Articles can also be written using the [LaTeX template](https://journal.r-project.org/share/RJtemplate.zip). Instructions on using this template are provided in the [LaTeX author guide](https://journal.r-project.org/share/author-guide.pdf). LaTeX submissions that do not follow these guidelines will be rejected without review.
+We strongly encourage you to use Rmarkdown with the `rjtools` package. It makes the submission more reproducible, and makes it easier to render your article in both HTML and PDF formats.
+
+However, we still accept articles written in LaTeX, although they may be processed more slowly.
+
+If you do use LaTeX, you must use the [LaTeX template](https://github.com/rjournal/share/raw/refs/heads/master/RJtemplate.zip). Instructions on using this template are provided in the [LaTeX author guide](https://github.com/rjournal/share/raw/refs/heads/master/author-guide.pdf). LaTeX submissions that do not follow these guidelines will be rejected without review.
 
 The `rjtools` check functions described below can also be applied to check your files prior to submission.
 
