--- a/index.Rmd
+++ b/index.Rmd
@@ -57,6 +57,8 @@ p > span.doi, td > span.doi {
 
 The R Journal is a peer-reviewed, open-access scientific journal, published by The R Foundation. It features short- to medium-length articles (up to 20 pages) covering topics of interest to users and developers of R. For example, description and implementation details of R packages, surveys or reviews of R software related to a particular area, applications of R software or descriptions of teaching resources related to R.
 
+All submissions must primarily be about R packages and R programming. Submissions that involve R calling other software will be considered provided: (a) the other software is open source and free to use; (b) is widely used; and (c) there is a clear justification for using it rather than a native R implementation. Occasional exceptions may be made if (a) is not satisfied, provided there is no viable open source alternative.
+
 The R Journal reaches a wide audience and has a thorough review process. It has a generally increasing [SJR impact factor](https://www.scimagojr.com/journalsearch.php?q=21100255423&amp;tip=sid&amp;exact=no). Papers are expected to be concise, clearly written, not too technical, clearly related to R, and follow reproducible practices. Additional technical details and examples could be included as supplementary material. Authors of refereed articles should take care to:
 
 * put their contribution in context, in particular discuss related R functions or packages;
