pdf of issue 2025-1 now added

--- a/_articles/RJ-2025-001/RJ-2025-001.Rmd
+++ b/_articles/RJ-2025-001/RJ-2025-001.Rmd
@@ -59,8 +59,8 @@ author:
 date: '2025-08-07'
 date_received: '2024-01-11'
 journal:
-  firstpage: ~
-  lastpage: []
+  firstpage: 5
+  lastpage: 23
 volume: 17
 issue: 1
 slug: RJ-2025-001
