--- a/_articles/RJ-2025-003/RJ-2025-003.Rmd
+++ b/_articles/RJ-2025-003/RJ-2025-003.Rmd
@@ -43,8 +43,8 @@ author:
 date: '2025-08-07'
 date_received: '2024-05-17'
 journal:
-  firstpage: ~
-  lastpage: []
+  firstpage: 47
+  lastpage: 66
 volume: 17
 issue: 1
 slug: RJ-2025-003
