--- a/_articles/RJ-2025-007/RJ-2025-007.Rmd
+++ b/_articles/RJ-2025-007/RJ-2025-007.Rmd
@@ -46,8 +46,8 @@ author:
 date: '2025-08-07'
 date_received: '2024-07-12'
 journal:
-  firstpage: ~
-  lastpage: []
+  firstpage: 136
+  lastpage: 159
 volume: 17
 issue: 1
 slug: RJ-2025-007
