--- a/_articles/RJ-2025-008/RJ-2025-008.Rmd
+++ b/_articles/RJ-2025-008/RJ-2025-008.Rmd
@@ -38,8 +38,8 @@ author:
 date: '2025-08-07'
 date_received: '2025-01-22'
 journal:
-  firstpage: ~
-  lastpage: []
+  firstpage: 160
+  lastpage: 179
 volume: 17
 issue: 1
 slug: RJ-2025-008
