--- a/_news/RJ-2025-1-cran/RJ-2025-1-cran.Rmd
+++ b/_news/RJ-2025-1-cran/RJ-2025-1-cran.Rmd
@@ -27,6 +27,9 @@ preamble: \usepackage{float, longtable}
 volume: 17
 issue: 1
 slug: RJ-2025-1-cran
+journal:
+  lastpage: 222
+  firstpage: 221
 
 ---
 
