--- a/_news/RJ-2025-1-editorial/RJ-2025-1-editorial.Rmd
+++ b/_news/RJ-2025-1-editorial/RJ-2025-1-editorial.Rmd
@@ -16,6 +16,9 @@ header-includes: \usepackage{parskip}
 volume: 17
 issue: 1
 slug: RJ-2025-1-editorial
+journal:
+  lastpage: 4
+  firstpage: 3
 
 ---
 
