--- a/_articles/RJ-2025-010/RJ-2025-010.Rmd
+++ b/_articles/RJ-2025-010/RJ-2025-010.Rmd
@@ -41,8 +41,8 @@ author:
 date: '2025-08-07'
 date_received: '2025-02-06'
 journal:
-  firstpage: ~
-  lastpage: []
+  firstpage: 200
+  lastpage: 220
 volume: 17
 issue: 1
 slug: RJ-2025-010
