--- a/_issues/2025-1/2025-1.Rmd
+++ b/_issues/2025-1/2025-1.Rmd
@@ -7,19 +7,19 @@ volume: 17
 issue: 1
 editors:
   chief:
+  - name: Rob J Hyndman
+    affiliation: Monash University
+    country: Australia
+  executive:
   - name: Mark van der Loo
     affiliation: Statistics Netherlands and Leiden University
     country: Netherlands
-  executive:
-  - name: Simon Urbanek
-    affiliation: University of Auckland
-    country: New Zealand
-  - name: Rob Hyndman
-    affiliation: Monash University
-    country: Australia
   - name: Emi Tanaka
     affiliation: Australian National University
     country: Australia
+  - name: Emily Zabor
+    affiliation: Cleveland Clinic
+    country: United States
   technical:
   - name: Mitchell O'Hara-Wild
     affiliation: Monash University
@@ -28,9 +28,9 @@ articles:
   before: ~
   after: ~
 output:
-  rjtools::rjournal_web_issue: ~
   rjtools::rjournal_pdf_issue:
-    render_all: yes
+    render_all: true
+  rjtools::rjournal_web_issue: default
 news:
 - RJ-2025-1-cran
 - RJ-2025-1-rfoundation
